@@ -13,6 +13,9 @@ What's New in astroid 3.3.6?
 ============================
 Release date: TBA
 
+* Fix inability to import `collections.abc` in python 3.13.1.
+
+  Closes pylint-dev/pylint#10112
 
 
 What's New in astroid 3.3.5?
